--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-using-openai-function-calling.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-using-openai-function-calling.ipynb
@@ -41,7 +41,7 @@
     "from pymongo import MongoClient\n",
     "\n",
     "GPT_MODEL = \"gpt-3.5-turbo-0613\"\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = ""
    ]
   },
   {
