updated new examples with assistants api

--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install python-dotenv\n",
     "!pip install pymongo\n",
     "!pip install tenacity\n",
     "!pip install termcolor \n",
@@ -35,13 +36,24 @@
     "import json5\n",
     "import ast\n",
     "import openai\n",
+    "import os\n",
     "from termcolor import colored\n",
     "import requests\n",
     "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
     "from pymongo import MongoClient\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = load_dotenv()\n",
+    "openai.api_key = os.environ['OPENAI_API_KEY']\n",
     "\n",
-    "GPT_MODEL = \"gpt-3.5-turbo-0613\"\n",
-    "openai.api_key = ""
+    "GPT_MODEL = \"gpt-3.5-turbo-0613\""
    ]
   },
   {
