--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
@@ -2,12 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install openai\n",
+    "!pip install python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
-    "openai.api_key="
+    "import os\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = load_dotenv()\n",
+    "openai.api_key = os.environ['OPENAI_API_KEY']"
    ]
   },
   {
