moved the input files to a separate folder

--- a/examples/openai/getting_started_with_assistants_api/working-with-files-in-assistants-api.ipynb
+++ b/examples/openai/getting_started_with_assistants_api/working-with-files-in-assistants-api.ipynb
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "file = client.files.create(\n",
-    "  file=open(\"savings-2023.csv\", \"rb\"),\n",
+    "  file=open(\"./savings-2023.csv\", \"rb\"),\n",
     "  purpose='assistants'\n",
     ")"
    ]
