updated mongodb query generator to openai v1 sdk

--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
@@ -47,6 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43f01f89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,9 +461,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
