Updated mongodb-query-generator code to function

--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,15 +45,32 @@
     "    \"\"\"\n",
     "    \n",
     "def get_user_prompt(input_data, output_data):\n",
-    "    return f\"\"\"Your task is to write a MongoDB Query \\\n",
+    "    return f\"\"\"Your task is to write a MongoDB Query\\\n",
     "    that would produce the expected output for the given input.\n",
     "\n",
     "    You will always return a JSON response with the following fields.\n",
     "    ```\n",
     "    mongoDBQuery: The MongoDB aggregation pipeline or find query to produce the expected output for a given input.\\\n",
     "    This field corresponds to only the list of stages in the aggregation pipeline or the filter criteria in the find query.\\\n",
-    "    This field shouldn't contain the \"db.collection.aggregate\" or \"db.collection.find\" prefixes, just the filter criteria \\\n",
+    "    This field shouldn't contain the \"db.collection.aggregate\" or \"db.collection.find\" prefixes, just the filter criteria\\\n",
     "    or the stages in the aggregation pipeline. \n",
+    "    \n",
+    "    queryExplanation: A detailed explanation for the query that was returned.\n",
+    "    ```\n",
+    "    \n",
+    "    Input data: {input_data} \n",
+    "    Expected output data: {output_data}\n",
+    "    \"\"\"\n",
+    "\n",
+    "def get_user_prompt_for_aggregation_pipeline(input_data, output_data):\n",
+    "    return f\"\"\"Your task is to write a MongoDB Query, specifically an aggregation pipeline\\\n",
+    "    that would produce the expected output for the given input.\n",
+    "\n",
+    "    You will always return a JSON response with the following fields.\n",
+    "    ```\n",
+    "    mongoDBQuery: The MongoDB aggregation pipeline to produce the expected output for a given input.\\\n",
+    "    This field corresponds to just the list of stages in the aggregation pipeline \\\n",
+    "    and shouldn't contain the \"db.collection.aggregate\" prefix.\n",
     "    \n",
     "    queryExplanation: A detailed explanation for the query that was returned.\n",
     "    ```\n",
@@ -65,13 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_mongodb_query(input_data, output_data, model=\"gpt-3.5-turbo-1106\"):\n",
     "    system_prompt = get_system_prompt()\n",
-    "    user_prompt = get_user_prompt(input_data, output_data)\n",
+    "    #user_prompt = get_user_prompt(input_data, output_data)\n",
+    "    user_prompt = get_user_prompt_for_aggregation_pipeline(input_data, output_data)\n",
     "\n",
     "    #print(f\"System Prompt: {system_prompt}\")\n",
     "    #print(f\"User Prompt: {user_prompt}\")\n",
@@ -99,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +179,7 @@
       "                }\n",
       "            }\n",
       "        ],\n",
-      "        \"queryExplanation\": \"The query consists of two stages in the aggregation pipeline. The first stage is the `$group` stage, which groups the documents by the 'team' field. For each group, it counts the number of players using the `$sum` accumulator, which increments by 1 for each document in the group, resulting in a count of players per team. The second stage is the `$project` stage, which reshapes each document in the stream; the `_id` field is excluded from the output, and the 'team' field is set to the value of `_id` (which contains the team name after the `$group` stage). The 'playerCount' field is included in the output as is.\"\n",
+      "        \"queryExplanation\": \"The query consists of two stages in the aggregation pipeline. The first stage is the `$group` stage, which groups the documents by the 'team' field. For each group, it counts the number of players using the `$sum` accumulator, which increments by 1 for each document in the group, resulting in a count of players per team. The second stage is the `$project` stage, which reshapes each document in the stream; the `_id` field is suppressed and the 'team' field is set to the value of `_id` from the `$group` stage. The 'playerCount' field is included as is.\"\n",
       "    }\n",
       "\n"
      ]
@@ -321,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,8 +361,8 @@
     "ex3_output_data = \"\"\"\n",
     "[\n",
     "  {\n",
-    "    \"name\": \"Sachin\",\n",
-    "    \"age\": 50,\n",
+    "    \"name\": \"Lara\",\n",
+    "    \"age\": 52,\n",
     "    \"team\": \"India\"\n",
     "  }\n",
     "]\n",
@@ -353,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -369,10 +387,23 @@
       "      }\n",
       "    },\n",
       "    {\n",
+      "      \"$sort\": {\n",
+      "        \"age\": -1\n",
+      "      }\n",
+      "    },\n",
+      "    {\n",
       "      \"$limit\": 1\n",
+      "    },\n",
+      "    {\n",
+      "      \"$project\": {\n",
+      "        \"_id\": 0,\n",
+      "        \"name\": 1,\n",
+      "        \"age\": 1,\n",
+      "        \"team\": 1\n",
+      "      }\n",
       "    }\n",
       "  ],\n",
-      "  \"queryExplanation\": \"The query uses the $match stage to filter documents where the team field is 'India'. Then, it uses the $limit stage to limit the output to the first document that matches the criteria, effectively returning only the first player from team India.\"\n",
+      "  \"queryExplanation\": \"The aggregation pipeline starts by matching documents where the team is 'India'. Then, it sorts the matched documents based on age in descending order. After sorting, it limits the output to the first document, which will be the oldest player. Finally, it projects only the 'name', 'age', and 'team' fields in the output.\"\n",
       "}\n"
      ]
     }
