mongodb query generator openai function calling code cleanup

--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
@@ -78,12 +78,6 @@
     "            print(colored(f\"system: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
     "        elif message[\"role\"] == \"user\":\n",
     "            print(colored(f\"user: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
-    "        # elif message[\"role\"] == \"assistant\" and message.get(\"function_call\"):\n",
-    "        #     print(colored(f\"assistant: {message['function_call']}\\n\", role_to_color[message[\"role\"]]))\n",
-    "        # elif message[\"role\"] == \"assistant\" and not message.get(\"function_call\"):\n",
-    "        #     print(colored(f\"assistant: {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
-    "        # elif message[\"role\"] == \"function\":\n",
-    "        #     print(colored(f\"function ({message['name']}): {message['content']}\\n\", role_to_color[message[\"role\"]]))\n",
     "        elif message[\"role\"] == \"assistant\" and message.get(\"tool_calls\"):\n",
     "            print(colored(f\"assistant: {message['tool_calls'][0]['function']}\\n\", role_to_color[message[\"role\"]]))\n",
     "        elif message[\"role\"] == \"assistant\" and not message.get(\"tool_calls\"):\n",
@@ -113,8 +107,6 @@
     "    assistant_message = chat_completion_json[\"choices\"][0][\"message\"]\n",
     "    finish_reason = chat_completion_json[\"choices\"][0][\"finish_reason\"]\n",
     "    \n",
-    "    if assistant_message.get(\"tool_calls\") is None:\n",
-    "        assistant_message.pop(\"tool_calls\", None)\n",
     "    if assistant_message.get(\"function_call\") is None:\n",
     "        assistant_message.pop(\"function_call\", None)\n",
     "    \n",
@@ -334,20 +326,20 @@
    "outputs": [],
    "source": [
     "####This cell needs to be deleted####\n",
-    "messages = []\n",
-    "messages.append({\"role\": \"system\", \"content\": system_prompt})\n",
-    "messages.append({\"role\": \"user\", \"content\": user_prompt})\n",
+    "# messages = []\n",
+    "# messages.append({\"role\": \"system\", \"content\": system_prompt})\n",
+    "# messages.append({\"role\": \"user\", \"content\": user_prompt})\n",
     "\n",
-    "chat_response = chat_completion(messages, \n",
-    "                                tools,\n",
-    "                                tool_choice={\"type\": \"function\", \"function\": {\"name\": \"verify_query\"}})\n",
+    "# chat_response = chat_completion(messages, \n",
+    "#                                 tools,\n",
+    "#                                 tool_choice={\"type\": \"function\", \"function\": {\"name\": \"verify_query\"}})\n",
     "\n",
-    "assistant_message = chat_response[\"assistant_message\"]\n",
+    "# assistant_message = chat_response[\"assistant_message\"]\n",
     "\n",
-    "messages.append(assistant_message)\n",
+    "# messages.append(assistant_message)\n",
     "\n",
-    "pretty_print_conversation(messages)\n",
-    "print(json.dumps(messages, indent=2))"
+    "# pretty_print_conversation(messages)\n",
+    "# print(json.dumps(messages, indent=2))"
    ]
   },
   {
