--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-function-calling.ipynb
@@ -69,7 +69,6 @@
     "        \"system\": \"red\",\n",
     "        \"user\": \"green\",\n",
     "        \"assistant\": \"blue\",\n",
-    "        \"function\": \"magenta\",\n",
     "        \"tool\": \"magenta\"\n",
     "    }\n",
     "    \n",
@@ -250,29 +249,14 @@
    "outputs": [],
    "source": [
     "input_data = [\n",
-    "    {\n",
-    "        \"name\": \"Sachin\",\n",
-    "        \"team\": \"India\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"Sourav\",\n",
-    "        \"team\": \"India\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"Lara\",\n",
-    "        \"team\": \"West Indies\"\n",
-    "    }\n",
+    "    { \"name\": \"Sachin\", \"team\": \"India\" },\n",
+    "    { \"name\": \"Sourav\", \"team\": \"India\" },\n",
+    "    { \"name\": \"Lara\", \"team\": \"West Indies\" }\n",
     "]\n",
     "\n",
     "output_data = [\n",
-    "    {\n",
-    "        \"team\": \"India\",\n",
-    "        \"playerCount\": 2\n",
-    "    },\n",
-    "    {\n",
-    "        \"team\": \"West Indies\",\n",
-    "        \"playerCount\": 1\n",
-    "    }\n",
+    "    { \"team\": \"India\", \"playerCount\": 2 },\n",
+    "    { \"team\": \"West Indies\", \"playerCount\": 1 }\n",
     "]"
    ]
   },
@@ -316,63 +300,6 @@
     "The query that you provided as argument to the function call didn't produce the expected output. \\\n",
     "Try again to write a new query that would produce the expected output\n",
     "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a89e835e-ab48-4200-a015-0a3636496abc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "####This cell needs to be deleted####\n",
-    "# messages = []\n",
-    "# messages.append({\"role\": \"system\", \"content\": system_prompt})\n",
-    "# messages.append({\"role\": \"user\", \"content\": user_prompt})\n",
-    "\n",
-    "# chat_response = chat_completion(messages, \n",
-    "#                                 tools,\n",
-    "#                                 tool_choice={\"type\": \"function\", \"function\": {\"name\": \"verify_query\"}})\n",
-    "\n",
-    "# assistant_message = chat_response[\"assistant_message\"]\n",
-    "\n",
-    "# messages.append(assistant_message)\n",
-    "\n",
-    "# pretty_print_conversation(messages)\n",
-    "# print(json.dumps(messages, indent=2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a76ff580-c502-42b4-9d82-3b302d209204",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "####This cell needs to be deleted####\n",
-    "\n",
-    "# if assistant_message.get(\"tool_calls\"):\n",
-    "#     result = execute_function_call(assistant_message)\n",
-    "#     print(f\"Results after invoking the function: {result}\")\n",
-    "\n",
-    "#     messages.append({\n",
-    "#         \"role\": \"tool\", \n",
-    "#         \"tool_call_id\": assistant_message[\"tool_calls\"][0]['id'], \n",
-    "#         \"name\": assistant_message[\"tool_calls\"][0][\"function\"][\"name\"], \n",
-    "#         \"content\": result[\"message\"]\n",
-    "#     })\n",
-    "\n",
-    "#     chat_response = None\n",
-    "#     if result[\"result\"] == \"failure\":\n",
-    "#         messages.append({\"role\": \"user\", \"content\": user_prompt_failure_scenario})\n",
-    "#         chat_response = chat_completion(messages, tools, tool_choice={\"type\": \"function\", \"function\": {\"name\": \"verify_query\"}})\n",
-    "#     else:\n",
-    "#         chat_response = chat_completion(messages, tools)\n",
-    "    \n",
-    "#     assistant_message = chat_response[\"assistant_message\"]\n",
-    "#     messages.append(assistant_message)\n",
-    "    \n",
-    "#     pretty_print_conversation(messages)"
    ]
   },
   {
