--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai.ipynb
@@ -35,6 +35,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GPT3_MODEL = \"gpt-3.5-turbo-1106\"\n",
+    "GPT4_MODEL = \"gpt-4-1106-preview\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [],
@@ -86,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_mongodb_query(input_data, output_data, model=\"gpt-3.5-turbo-1106\"):\n",
+    "def get_mongodb_query(input_data, output_data, model=GPT3_MODEL):\n",
     "    system_prompt = get_system_prompt()\n",
     "    #user_prompt = get_user_prompt(input_data, output_data)\n",
     "    user_prompt = get_user_prompt_for_aggregation_pipeline(input_data, output_data)\n",
@@ -186,7 +196,7 @@
     }
    ],
    "source": [
-    "get_mongodb_query(ex1_input_data, ex1_output_data, \"gpt-4-1106-preview\")"
+    "get_mongodb_query(ex1_input_data, ex1_output_data, GPT4_MODEL)"
    ]
   },
   {
@@ -325,7 +335,7 @@
     }
    ],
    "source": [
-    "get_mongodb_query(ex2_input_data, ex2_output_data, \"gpt-4-1106-preview\")"
+    "get_mongodb_query(ex2_input_data, ex2_output_data, GPT4_MODEL)"
    ]
   },
   {
@@ -1260,9 +1270,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv_mqg_openai",
+   "display_name": ".venv_mqg_oaii",
    "language": "python",
-   "name": ".venv_mqg_openai"
+   "name": ".venv_mqg_oaii"
   },
   "language_info": {
    "codemirror_mode": {
