--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "5d0c36f5-8cb9-424d-b0c3-108cd4bfedd4",
    "metadata": {},
    "outputs": [],
@@ -51,42 +51,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14dd6a75-9ef7-4013-bb95-262537c7d534",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assistant_instructions = \"\"\"You are a MongoDB expert with great expertise in writing MongoDB queries \\\n",
-    "for any given data to produce an expected output.\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8dea03a-3172-457e-8e20-610f4ee77b7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_user_prompt(input_data, output_data):\n",
-    "    return f\"\"\"Your task is to write a MongoDB Query, specifically an aggregation pipeline\\\n",
-    "    that would produce the expected output for the given input.\n",
-    "\n",
-    "    You will always return a JSON response with the following fields.\n",
-    "    ```\n",
-    "    mongoDBQuery: The MongoDB aggregation pipeline to produce the expected output for a given input.\\\n",
-    "    This field corresponds to just the list of stages in the aggregation pipeline \\\n",
-    "    and shouldn't contain the \"db.collection.aggregate\" prefix.\n",
-    "    \n",
-    "    queryExplanation: A detailed explanation for the query that was returned.\n",
-    "    ```\n",
-    "    \n",
-    "    Input data: {input_data} \n",
-    "    Expected output data: {output_data}\n",
-    "    \"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "3a9d2c7c-8d4f-4804-801c-83bf0b36d622",
    "metadata": {},
    "outputs": [],
@@ -124,7 +88,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "14dd6a75-9ef7-4013-bb95-262537c7d534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assistant_instructions = \"\"\"You are a MongoDB expert with great expertise in writing MongoDB queries \\\n",
+    "for any given data to produce an expected output.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b8dea03a-3172-457e-8e20-610f4ee77b7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_prompt(input_data, output_data):\n",
+    "    return f\"\"\"Your task is to write a MongoDB Query, specifically an aggregation pipeline\\\n",
+    "    that would produce the expected output for the given input.\n",
+    "\n",
+    "    You will always return a JSON response with the following fields.\n",
+    "    ```\n",
+    "    mongoDBQuery: The MongoDB aggregation pipeline to produce the expected output for a given input.\\\n",
+    "    This field corresponds to just the list of stages in the aggregation pipeline \\\n",
+    "    and shouldn't contain the \"db.collection.aggregate\" prefix.\n",
+    "    \n",
+    "    queryExplanation: A detailed explanation for the query that was returned.\n",
+    "    ```\n",
+    "    \n",
+    "    Input data: {input_data} \n",
+    "    Expected output data: {output_data}\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "237c8f7e-d180-4921-84cf-e9f79ccbb716",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "52c0d30e-85ad-46f5-80ce-0941eb3fdbc2",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "74ea17db-eab7-4e05-83f9-aab6e26268d2",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "714d6d81-c6af-420d-8348-f227db77ec4b",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "601dc7b9-459a-4fed-9124-8a08d5d68724",
    "metadata": {},
    "outputs": [],
@@ -208,14 +208,12 @@
     "            )\n",
     "            print(f\"Assistants Response: {messages.data[0].content[0].text.value}\")\n",
     "            break\n",
-    "            \n",
-    "        time.sleep(sleep_interval)\n",
-    "        \n",
     "    except Exception as e:\n",
     "        print(f\"Error: {str(e)}. Trying again...\")\n",
+    "    finally:\n",
     "        time.sleep(sleep_interval)\n",
     "else:        \n",
-    "    # If max_attempts reached without completion, call the callback with a timeout message\n",
+    "    # If max_attempts reached without completion\n",
     "    print(\"Timeout: Assistant didn't respond in time. Please try again.\")    "
    ]
   },
@@ -363,15 +361,12 @@
     "                                            .tool_calls[0].function.arguments)\n",
     "            print(f\"Assistant Response:\\n{assitant_response}\")\n",
     "            break\n",
-    "\n",
-    "        print(\"assistant working...\")\n",
-    "        time.sleep(sleep_interval)\n",
-    "        \n",
     "    except Exception as e:\n",
     "        print(f\"Error: {str(e)}. Trying again...\")\n",
+    "    finally:\n",
     "        time.sleep(sleep_interval)\n",
     "else:        \n",
-    "    # If max_attempts reached without completion, call the callback with a timeout message\n",
+    "    # If max_attempts reached without completion, then assistant call timed out\n",
     "    print(\"Timeout: Assistant didn't respond in time. Please try again.\")    "
    ]
   },
