--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api-with-function-tool.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api-with-function-tool.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def executeQuery(mongoDBQuery):\n",
+    "def execute_query(mongoDBQuery):\n",
     "    return \"success\""
    ]
   },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1f493bff-aadf-439c-b2a7-ff36cc360f6b",
    "metadata": {},
    "outputs": [
@@ -238,12 +238,12 @@
      "output_type": "stream",
      "text": [
       "Function Name: executeQuery\n",
-      "Arguments: {'mongoDBQuery': '[\\n  {\\n    \"$group\": {\\n      \"_id\": \"$team\",\\n      \"playerCount\": {\"$sum\": 1}\\n    }\\n  },\\n  {\\n    \"$project\": {\\n      \"team\": \"$_id\",\\n      \"playerCount\": 1,\\n      \"_id\": 0\\n    }\\n  }\\n]', 'queryExplanation': \"The query groups the documents by the 'team' field and calculates the count of players for each team. Then it projects the 'team' and 'playerCount' fields, and removes the '_id' field from the output.\"}\n",
+      "Arguments: {'mongoDBQuery': '[\\n  {\\n    \"$group\": {\\n      \"_id\": \"$team\",\\n      \"playerCount\": { \"$sum\": 1 }\\n    }\\n  },\\n  {\\n    \"$project\": {\\n      \"team\": \"$_id\",\\n      \"playerCount\": 1,\\n      \"_id\": 0\\n    }\\n  }\\n]', 'queryExplanation': \"First, group the documents by the 'team' field, then calculate the count of players for each team. Finally, project the 'team' and 'playerCount' fields and exclude the '_id' field from the output.\"}\n",
       "Assistant Response - MongoDB Query: [\n",
       "  {\n",
       "    \"$group\": {\n",
       "      \"_id\": \"$team\",\n",
-      "      \"playerCount\": {\"$sum\": 1}\n",
+      "      \"playerCount\": { \"$sum\": 1 }\n",
       "    }\n",
       "  },\n",
       "  {\n",
@@ -270,7 +270,7 @@
     "            arguments = json5.loads(tool_call.function.arguments)\n",
     "            print(f\"Function Name: {function_name}\\nArguments: {arguments}\")\n",
     "            \n",
-    "            response = executeQuery(arguments[\"mongoDBQuery\"])\n",
+    "            response = execute_query(arguments[\"mongoDBQuery\"])\n",
     "            if response == \"success\":\n",
     "                print(f\"Assistant Response - MongoDB Query: {arguments['mongoDBQuery']}\")\n",
     "                break\n",
