--- a/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
+++ b/examples/openai/mongodb_query_generator/mongodb-query-generator-openai-assistants-api.ipynb
@@ -143,7 +143,9 @@
     "    name=\"MongoDB SME\",\n",
     "    instructions=assistant_instructions,\n",
     "    model=GPT3_MODEL\n",
-    ")"
+    ")\n",
+    "\n",
+    "MONGO_DB_SME_ASSISTANT_ID = assistant.id"
    ]
   },
   {
@@ -185,10 +187,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d8b8d35a-628a-4cf8-94f4-da995d39407e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "assistant working...\n",
+      "assistant working...\n",
+      "assistant working...\n",
+      "assistant working...\n",
+      "assistant working...\n",
+      "Assistants Response: The MongoDB aggregation pipeline query to produce the expected output for the given input data is as follows:\n",
+      "\n",
+      "```json\n",
+      "[\n",
+      "  {\n",
+      "    $group: {\n",
+      "      _id: \"$team\",\n",
+      "      playerCount: { $sum: 1 }\n",
+      "    }\n",
+      "  },\n",
+      "  {\n",
+      "    $project: {\n",
+      "      _id: 0,\n",
+      "      team: \"$_id\",\n",
+      "      playerCount: 1\n",
+      "    }\n",
+      "  }\n",
+      "]\n",
+      "```\n",
+      "\n",
+      "Explanation:\n",
+      "1. The `$group` stage groups the documents by the \"team\" field and calculates the count of players for each team using the `$sum` accumulator.\n",
+      "2. The `$project` stage reshapes the output to include only the \"team\" and \"playerCount\" fields, while excluding the `_id` field.\n",
+      "\n",
+      "This pipeline first groups the documents by the \"team\" field and then projects the result to include the team name and the count of players, as per the expected output.\n"
+     ]
+    }
+   ],
    "source": [
     "max_attempts = 60\n",
     "sleep_interval = 2\n",
@@ -227,15 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "6babee74-3aa5-4763-9628-187f7102ea20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assistant_with_tools = openai_client.beta.assistants.create(\n",
-    "    name=\"MongoDB Expert\",\n",
-    "    instructions=assistant_instructions,\n",
-    "    model=GPT3_MODEL,\n",
+    "assistant = openai_client.beta.assistants.update(\n",
+    "    MONGO_DB_SME_ASSISTANT_ID,\n",
     "    tools=[\n",
     "        {\n",
     "            \"type\": \"function\",\n",
@@ -266,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "6e85d73e-f599-42aa-b4e3-aa834a93f344",
    "metadata": {},
    "outputs": [],
@@ -284,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "d45a211a-9162-4c8b-9f3b-cb54699c0d38",
    "metadata": {},
    "outputs": [],
@@ -294,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "bc3e03fd-b3d9-49c6-9947-8878329e800a",
    "metadata": {},
    "outputs": [],
@@ -304,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "e4ffbacf-de34-4de7-ab66-8cea4cfcf50c",
    "metadata": {},
    "outputs": [],
@@ -318,20 +355,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "a8dd1233-6d22-4435-a091-aaabe679555a",
    "metadata": {},
    "outputs": [],
    "source": [
     "run = openai_client.beta.threads.runs.create(\n",
     "    thread_id=thread.id,\n",
-    "    assistant_id=assistant_with_tools.id\n",
+    "    assistant_id=assistant.id\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "a75d618e-4066-4e14-9061-eab4c708785e",
    "metadata": {},
    "outputs": [
@@ -340,7 +377,7 @@
      "output_type": "stream",
      "text": [
       "Assistant Response:\n",
-      "{'mongoDBQuery': '[{\"$group\":{\"_id\":\"$team\",\"playerCount\":{\"$sum\":1}}},{\"$project\":{\"team\":\"$_id\",\"playerCount\":1,\"_id\":0}}]', 'queryExplanation': \"This query uses the $group stage to group the documents by the 'team' field, and then uses the $project stage to reshape the output to include the 'team' and 'playerCount' fields while excluding the _id field.\"}\n"
+      "{'mongoDBQuery': '[{\\n  \"$group\": {\\n    \"_id\": \"$team\",\\n    \"playerCount\": { \"$sum\": 1 }\\n  }\\n},{\\n  \"$project\": {\\n    \"_id\": 0,\\n    \"team\": \"$_id\",\\n    \"playerCount\": 1\\n  }\\n}]\\n', 'queryExplanation': \"The MongoDB aggregation pipeline starts with a $group stage where we group the data by the 'team' field and use the $sum accumulator to count the players for each team. Then, in the $project stage, we reshape the output to include 'team' and 'playerCount' fields and exclude the '_id' field.\"}\n"
      ]
     }
    ],
